update 2 capstone mq

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	   <header>
 	   	<div class="container nav">
            <img src="file:///C:/Users/Admin/Desktop/capstone_colmar_assets/images/ic-logo.svg">
-             <span><strong>COLMAR</strong>ACADEMY</span><span>On Campus</span><span>Online</span><span>or Companies</span>
+             <span><strong>COLMAR</strong>ACADEMY</span>
+              <p><span>On Campus</span><span>Online</span><span>or Companies</span></p>
                </div>
                   <div class="top-banner">
                    
