update 3 capstone mq

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+ <head>
      <title>COLMAR ACADEMY</title>
        <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-  </head>
-     <body>
-	   <header>
-	   	<div class="container nav">
-           <img src="file:///C:/Users/Admin/Desktop/capstone_colmar_assets/images/ic-logo.svg">
-             <span><strong>COLMAR</strong>ACADEMY</span>
-              <p><span>On Campus</span><span>Online</span><span>or Companies</span></p>
-               </div>
-                  <div class="top-banner">
+ </head>
+    <body>
+	  <header>
+	   	 <div class="nav">
+	       <div><img src="file:///C:/Users/Admin/Desktop/capstone_colmar_assets/images/ic-logo.svg"><span><strong>COLMAR</strong>ACADEMY</span></div>  <p><span>On Campus Online or Companies</span></p>
+                 </div>
+                 
+                 <div class="top-banner">
                    
 
 
