update 8 casptone mq

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
       <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
         <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+
  </head>
   <body>
 	  <header>
-        <img class="logo" src="file:///C:/Users/Admin/Desktop/capstone_colmar_assets/images/ic-logo.svg"><strong>COLMAR</strong><div style="color: yellow";>ACADEMY</div>
+        <img class="logo" src="images/ic-logo.svg"><strong>COLMAR</strong><div style="color: yellow";>ACADEMY</div>
         <nav> 
           <a href="#">On Campus</a> 
           <a href="#">Online</a> 
@@ -21,7 +22,7 @@
 
   
   <div class="top-banner">
-        <img src="C:\Users\Admin\Desktop\capstone_colmar_assets\images\banner.jpg">
+        <img src="images\banner.jpg">
         <section class="large-txt"><h1>LEARN SOMETHING<br/>NEW EVERY DAY</h1>
            <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit</h3>
               <div class="button">Start here</div>
