update 9 capstone mq

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 
  <head>
      <title>COLMAR ACADEMY</title>
-      <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
-        <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
+         <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
 
  </head>
   <body>
 	  <header>
-        <img class="logo" src="images/ic-logo.svg"><strong>COLMAR</strong><div style="color: yellow";>ACADEMY</div>
+        <img class="logo" src="images/ic-logo.svg"><strong>COLMAR</strong><div style="color: #ffff00";>ACADEMY</div>
         <nav> 
           <a href="#">On Campus</a> 
           <a href="#">Online</a> 
