update 10 capstone mq

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="images\banner.jpg">
         <section class="large-txt"><h1>LEARN SOMETHING<br/>NEW EVERY DAY</h1>
            <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit</h3>
-              <div class="button">Start here</div>
+              <div class="button"><a href="Start-here">Start here</a></div>
                 </section>
                   </div>
 
