--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav> 
           <a href="#">On Campus</a> 
           <a href="#">Online</a> 
-          <a href="#">or Companies</a> 
+          <a href="#">Or Companies</a> 
           <a href="#">Sign in</a>
         </nav>
     </header> 
@@ -26,7 +26,7 @@
         <img src="images\banner.jpg">
         <section class="large-txt"><h1>LEARN SOMETHING<br/>NEW EVERY DAY</h1>
            <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit</h3>
-              <div class="button"><a href="Start-here">Start here</a></div>
+              <div class="button"><a href="Start-here">Start Here</a></div>
                 </section>
                   </div>
 
