update 12 capstone mq

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	  <header>
         <img class="logo" src="images/ic-logo.svg"><strong>COLMAR</strong><div style="color: #ffff00";>ACADEMY</div>
         <nav> 
-          <a href="#">On Campus</a> 
-          <a href="#">Online</a> 
-          <a href="#">Or Companies</a> 
-          <a href="#">Sign in</a>
+          <a href="#">ON CAMPUS</a> 
+          <a href="#">ONLINE</a> 
+          <a href="#">OR COMPANIES</a> 
+          <a href="#">SIGN IN</a>
         </nav>
     </header> 
    
