update 13 capstone mq

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
  <head>
      <title>COLMAR ACADEMY</title>
-      <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
-       <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
-         <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Caveat:400,700" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
+          <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
 
  </head>
   <body>
@@ -24,8 +25,8 @@
   
   <div class="top-banner">
         <img src="images\banner.jpg">
-        <section class="large-txt"><h1>LEARN SOMETHING<br/>NEW EVERY DAY</h1>
-           <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit</h3>
+        <section class="large-txt"><h1>Learn Something<br/>New Every Day</h1>
+           <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit.</h3>
               <div class="button"><a href="Start-here">Start Here</a></div>
                 </section>
                   </div>
