update 14 capstone mq

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
  </head>
   <body>
+        <!--header-->
 	  <header>
-        <img class="logo" src="images/ic-logo.svg"><strong>COLMAR</strong><div style="color: #ffff00";>ACADEMY</div>
+        <img class="logo" src="images/ic-logo.svg"><strong>COLMAR</strong><div style="color: #ffff33";>ACADEMY</div>
+        <!--nav menu-->
         <nav> 
           <a href="#">ON CAMPUS</a> 
           <a href="#">ONLINE</a> 
@@ -21,20 +23,27 @@
         </nav>
     </header> 
    
-
-  
+         <!--top-banner-->
   <div class="top-banner">
         <img src="images\banner.jpg">
-        <section class="large-txt"><h1>Learn Something<br/>New Every Day</h1>
-           <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit.</h3>
+          <section class="large-txt"><h1>Learn Something<br/>New Every Day</h1>
+            <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit.</h3>
               <div class="button"><a href="Start-here">Start Here</a></div>
                 </section>
                   </div>
 
        
-
-
-
+         <!--main-section-->
+  <div class="main-content">
+        <img src="images\information-main.jpg">
+          <section class="medium-txt"><h2>It doesn't hurt to keep practicing</h2>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br/>
+                nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br/> 
+                eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+                    <div>Emanuel, Sr Strategist at Hiring.com</div>
+                      </section>
+                        </div>
+  
 
 
 
