--- a/index.html
+++ b/index.html
@@ -25,24 +25,30 @@
    
          <!--top-banner-->
   <div class="top-banner">
-        <img src="images\banner.jpg">
-          <section class="large-txt"><h1>Learn Something<br/>New Every Day</h1>
+         <img src="images\banner.jpg">
+          <section>
+           <h1>Learn Something<br/>New Every Day</h1>
             <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit.</h3>
-              <div class="button"><a href="Start-here">Start Here</a></div>
-                </section>
-                  </div>
+             <div class="button"><a href="Start-here">Start Here</a></div>
+              </section>
+               </div>
 
        
          <!--main-section-->
   <div class="main-content">
         <img src="images\information-main.jpg">
-          <section class="medium-txt"><h2>It doesn't hurt to keep practicing</h2>
+          <section class="main"><h2>It doesn't hurt to keep practicing</h2>
             <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br/>
                 nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br/> 
                 eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
                     <div>Emanuel, Sr Strategist at Hiring.com</div>
                       </section>
-                        </div>
+      <div class="main-images">                 
+        <img src="images\information-orientation.jpg">
+          <img src="images\information-campus.jpg">
+            <img src="images\information-guest-lecture.jpg">
+              </div>
+                </div>
   
 
 
