--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
         <!--header-->
 	  <header>
-        <img class="logo" src="images/ic-logo.svg"><strong>COLMAR</strong><div style="color: #ffff33";>ACADEMY</div>
+        <img class="logo" src="images/ic-logo.svg"><strong>COLMAR</strong><div style="color:black;">ACADEMY</div>
         <!--nav menu-->
         <nav> 
           <a href="#">ON CAMPUS</a> 
