update 19 capstone mq

--- a/index.html
+++ b/index.html
@@ -29,19 +29,22 @@
             <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit.</h3>
              <div class="button"><a href="Start-here">Start Here</a></div>
               </section>
-               </div>
+               </div> 
 
        
          <!--main-section-->
   <div class="main-content">
-        <img src="images\information-main.jpg">
-          <section class="main"><h2>It doesn't hurt to keep practicing</h2>
-            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br/>
-                nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br/> 
+         <section class="main">
+          <div class="top-section">
+           <img src="images\information-main.jpg">
+            <h2>It doesn't hurt to keep practicing</h2>
+             </div>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br/>
+               nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br/> 
                 eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-                    <div>Emanuel, Sr Strategist at Hiring.com</div>
-                      </section>
-  <div class="main-images">                 
+                 <div>Emanuel, Sr Strategist at Hiring.com</div>
+                  </section>
+  <div class="info-images">                 
     <img src="images\information-orientation.jpg">
       <img src="images\information-campus.jpg">
          <img src="images\information-guest-lecture.jpg">
