--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
        <div><img class="logo" src="images/ic-logo.svg"><strong>COLMAR</strong><span style="color:black;">ACADEMY </span></div>
         <!--nav menu-->
         <nav> 
-          <a href="#">ON CAMPUS</a> 
-          <a href="#">ONLINE</a> 
-          <a href="#">OR COMPANIES</a> 
-          <a href="#">SIGN IN</a>
+          <a href="#">On Campus</a> 
+          <a href="#">Online</a> 
+          <a href="#">Or Companies</a> 
+          <a href="#">Sign in</a>
         </nav>
     </header> 
 
