update 25 capstone mq

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
            <div class="info-images">    
               <div><img src="images\information-orientation.jpg"><section><h3>Orientation date</h3><span>Tue 10/11 & Weds 10/12: 8am-3</span><p><a href="#">Read More</a></p></section></div>
             
-              <div><img src="images\information-campus.jpg"><section><h3>Our Campus</h3><span>Find which campus i close by to you</span><p><a href="#">Read More</a></p></section></div>
+              <div><img src="images\information-campus.jpg"><section><h3>Our Campus</h3><span>Find which campus is close by to you</span><p><a href="#">Read More</a></p></section></div>
               
               <div><img src="images\information-guest-lecture.jpg"><section><h3>Our Guest Lecture</h3><span>Join a keynote with Oliver Sack about music in medical treatment</span><p><a href="#">Read More</a></p></section></div>
            </div>
