update 26 capstone mq

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
      <title>COLMAR ACADEMY</title>
-       <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Kranky" rel="stylesheet">
+
+       <link href="https://fonts.googleapis.com/css?family=Macondo+Swash+Caps" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Caveat:400,700" rel="stylesheet">
          <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
           <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
