update 26 capstone mq

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
      <title>COLMAR ACADEMY</title>
-      <link href="https://fonts.googleapis.com/css?family=Kranky" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Caveat:400,700" rel="stylesheet">
-         <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
-          <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-           <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">           
-            <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css?family=Kranky" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
+         <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+          <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">           
+           <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
   <body>
         
