update 33 capstone mq

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <div class="info-images">    
              <div><img src="images\information-orientation.jpg"><section><h3>Orientation Date</h3>
-               <br/>Tue 10/11 & Weds 10/12: 8am-3<br/><p><a href="#">Read More</a></p></section></div>
+               <br/>Tue 10/11 & Weds 10/12: 8am-3pm<br/><p><a href="#">Read More</a></p></section></div>
             
               <div><img src="images\information-campus.jpg"><section><h3>Our Campus</h3>
                <br/>Find which campus is close by to you<br/><p><a href="#">Read More</a></p></section></div>
