update 33 capstone mq

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
   <div class="info-images">    
-             <div><img src="images\information-orientation.jpg"><section><h3>Orientation Date</h3>
+               <div><img src="images\information-orientation.jpg"><section><h3>Orientation Date</h3>
                <br/>Tue 10/11 & Weds 10/12: 8am-3pm<br/><p><a href="#">Read More</a></p></section></div>
             
               <div><img src="images\information-campus.jpg"><section><h3>Our Campus</h3>
@@ -63,7 +63,7 @@
  <!--main-section--> 
      <!--Start-learning-->
  <div class="Careers">
-            <h1>Start Learning</h1>
+            <h2>Start Learning</h2>
      <div class="Boxes">
             <div><img src="images\course-software.jpg">
             <h3>Software Engineering</h3><span>COURSES</span><p>Web Development, Mobile Development,<br/>iOT, APi's</p></div>
@@ -86,7 +86,28 @@
       </div>
 
 
-                    
+  <!--bottom-section-->
+     <!--Thesis-exibit-->             
+  <div class="Thesis">
+           <h2>Thesis Exibit</h2>
+      <video src="videos\thesis.mp4"></video>
+
+   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   </body>
 </html>
