update 37 capstone mq

--- a/index.html
+++ b/index.html
@@ -93,14 +93,20 @@
           </div>
 <div class="Thesis-content">
       <div class="top-section">
-           <video src="videos/Thesis.mp4"></video>
+           <video src="videos/thesis.mp4"></video>
             <h3>Reimagine Urban</h3>
              <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec<br/> 
               consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget<br/> 
                magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-        <span>&copy 2016 Colmar Academy. All rights reserved</span><span>Terms<br/>Privacy</span>
-      </div>
 
+  <!--footer-->
+       <footer>
+        <span>&copy 2016 Colmar Academy. All rights reserved</span> <span>Terms<br/>Privacy</span>
+         </footer>
+     </div>
+
+  <!--right-section-->
+     <!--Thesis-exibit-section-->
   <div class="images">    
            <div><img src="images\thesis-fisma.jpg" alt="Fisma: Design and Prototype" title="Fisma: Design and Prototype"><section><h3>Fisma: Design and Prototype </h3><br/>Designer showcase of a new prototype product <br/></section></div>
       
