update 39 capstone mq

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
  
    <!--footer-->
        <footer>
-        <span>&copy 2016 Colmar Academy. All rights reserved</span> <span>Terms<br/>Privacy</span>
+        <span>&copy 2016 Colmar Academy. All rights reserved</span> <span>Terms Privacy</span>
          </footer>
      
 
