update 39 captone mq

--- a/index.html
+++ b/index.html
@@ -108,14 +108,15 @@
            <div><img src="images\thesis-now-and-then.jpg" alt="Now and Then" title="Now and Then"><section><h3>Now and Then</h3>
             <br/>Research study about New York<br/></section></div>
           </div>
-         </div>
+        </div>
       
 
  
    <!--footer-->
        <footer>
-        <span>&copy 2016 Colmar Academy. All rights reserved</span> <span>Terms Privacy</span>
-         </footer>
+        <span>&copy 2016 Colmar Academy. All rights reserved</span> 
+         <span class="terms">Terms Privacy</span>
+          </footer>
      
 
   </body>
