update 35 capstone mq

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
           <a href="#">Or Companies</a> 
           <a href="#">Sign in</a>
         </nav>
-    </header> 
+        
+<nav class="mobile-nav-container">
+          <img src="images/ic-on-campus.svg">
+          <img src="images/ic-online.svg">
+          <img src="images/ic-login.svg">
+        </nav>
+ </header> 
 
         
 <!--top-banner-->
