update 36 captone mq

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
  <header>
     <div><img class="logo" src="images/ic-logo.svg"><strong>COLMAR</strong><span style="color:black;">ACADEMY </span></div>
  <!--nav menu-->
-        <nav> 
-          <a href="#">On Campus</a> 
+        <nav class="desktop"> 
+          <a href="#">On Campus</a>
           <a href="#">Online</a> 
           <a href="#">Or Companies</a> 
           <a href="#">Sign in</a>
