update 37 capstone mq

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </nav>
         
 <nav class="mobile-nav-container">
+          <img src="images/ic-logo.svg">
           <img src="images/ic-on-campus.svg">
           <img src="images/ic-online.svg">
           <img src="images/ic-login.svg">
