update 51 capstone mq

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <div class="info-images">    
            <div><img src="resources\images\information-orientation.jpg" alt="Orientation" title="Orientation Date"><section><h3>Orientation Date</h3>
-            <span/>Tue 10/11 & Weds 10/12: 8am-3pm<span/><p><a href="#">Read More</a></p></section></div>
+            <span>Tue 10/11 & Weds 10/12: 8am-3pm<span/><p><a href="#">Read More</a></p></section></div>
             
            <div><img src="resources\images\information-campus.jpg" alt="Campus" title="Our Campus"><section><h3>Our Campus</h3>
             <span>Find which campus is close by to you<span/><p><a href="#">Read More</a></p></section></div>
