--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </nav>
         
 <nav class="mobile-nav-container">
-          <img src="resources/images/ic-logo.svg">
-          <img src="resources/images/ic-on-campus.svg">
-          <img src="resources/images/ic-online.svg">
-          <img src="resources/images/ic-login.svg">
+          <a href="#"><img src="resources/images/ic-logo.svg" alt="Or Campus" title="Or Campus"></a>
+          <a href="#"><img src="resources/images/ic-on-campus.svg" alt="Online" title="Online"></a>
+          <a href="#"><img src="resources/images/ic-online.svg" alt="Or Companies" title="Or Companies"></a>
+          <a href="#"><img src="resources/images/ic-login.svg" alt="Sign In" title="Sign In"></a>
          </nav>
  </header> 
 
