update 53 capstone mq

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
 <!--top-banner-->
  <div class="top-banner">
-      <img src="resources\images\banner.jpg">
+      <img src="resources\images\banner.jpg" alt="Colmar Academy" title="Colmar Academy">
          <section>
              <h1>Learn Something<br/>New Every Day</h1>
              <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit.</h3>
