update 54 capstone mq

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
 
 
-  <!--bottom-->
+  <!--top-Section-->
      <!--Thesis-exibit section-->             
         <div class="title">
          <h2>Thesis Exibit</h2>
