update 55 capstone mq

--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
       </div>
 
 
-  <!--top-Section-->
-     <!--Thesis-exibit section-->             
+ 
+ <!--Thesis-exibit--> 
+     <!--top-Section--> 
         <div class="title">
          <h2>Thesis Exibit</h2>
           </div>
@@ -107,8 +108,8 @@
                magna laoreet, efficitur dolor consequat, tristique ligula."</p>
            </div>
 
-  <!--right-section-->
-     <!--Thesis-exibit-section-->
+ <!--Thesis-exibit--> 
+     <!--right-section-->
   <div class="images">    
            <div><img src="resources\images\thesis-fisma.jpg" alt="Fisma: Design and Prototype" title="Fisma: Design and Prototype"><section><h3>Fisma: Design and Prototype</h3><span>Designer showcase of a new prototype product </span></section></div>
       
@@ -121,8 +122,8 @@
  
    <!--footer-->
        <footer>
-        <span>&copy 2016 Colmar Academy. All rights reserved</span> 
-         <span class="terms">Terms Privacy</span>
+        <div>&copy 2016 Colmar Academy. All rights reserved</div> 
+         <div class="terms">Terms Privacy</div>
           </footer>
      
 
