--- a/index.html
+++ b/index.html
@@ -56,24 +56,24 @@
 
   <div class="info-images">    
             <div><img src="resources\images\information-orientation.jpg" alt="Orientation" title="Orientation Date"><section><h3>Orientation Date</h3>
-             <span>Tue 10/11 & Weds 10/12: 8am-3pm</span><p><a href="#">Read More</a></p></section></div>
+             <span>Tue 10/11 & Weds 10/12: 8am-3pm</span><br/><a href="#">Read More</a></section></div>
             
              <div><img src="resources\images\information-campus.jpg" alt="Campus" title="Our Campus"><section><h3>Our Campus</h3>
-             <span>Find which campus is close by to you</span><p><a href="#">Read More</a></p></section></div>
+             <span>Find which campus is close by to you</span><br/><a href="#">Read More</a></section></div>
               
              <div><img src="resources\images\information-guest-lecture.jpg" alt="Lecture" title="Guest Lecture"><section><h3>Our Guest Lecture</h3>
-             <span>Join a keynote with Oliver Sack about music in medical treatment</span><p><a href="#">Read More</a></p></section></div>
+             <span>Join a keynote with Oliver Sack about music in medical treatment</span><br/><a href="#">Read More</a></section></div>
           </div>
- 
+  
   <div class="mobile-images">
              <div><img src="resources\images\information-orientation-mobile.jpg" alt="Orientation" title="Orientation Date"><section><h3>Orientation Date</h3>
-             <span>Tue 10/11 & Weds 10/12: 8am-3pm</span><p><a href="#">Read More</a></p></section></div>
+             <span>Tue 10/11 & Weds 10/12: 8am-3pm</span><br/><a href="#">Read More</a></section></div>
 
              <div><img src="resources\images\information-campus-mobile.jpg" alt="Campus" title="Our Campus"><section><h3>Our Campus</h3>
-             <span>Find which campus is close by to you</span><p><a href="#">Read More</a></p></section></div>
+             <span>Find which campus is close by to you</span><br/><a href="#">Read More</a></section></div>
 
              <div><img src="resources\images\information-guest-lecture-mobile.jpg" alt="Guest Lecture"><section><h3>Our Guest Lecture</h3>
-             <span>Join a keynote with Oliver Sack about music in medical treatment</span><p><a href="#">Read More</a></p></section></div>
+             <span>Join a keynote with Oliver Sack about music in medical treatment</span><br/><a href="#">Read More</a></section></div>
         </div>
       </div>
  
