update 62 capstone mq

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
   <div class="info-images">    
-            <div><img src="resources\images\information-orientation.jpg" alt="Orientation" title="Orientation Date"><section><h3>Orientation Date</h3>
+            <div><img src="resources\images\information-orientation.jpg" alt="Orientation Date" title="Orientation"><section><h3>Orientation Date</h3>
              <span>Tue 10/11 & Weds 10/12: 8am-3pm</span><br/><a href="#">Read More</a></section></div>
             
              <div><img src="resources\images\information-campus.jpg" alt="Campus" title="Our Campus"><section><h3>Our Campus</h3>
