update 68 capstone mq

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br/>
                   nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br/> 
                   eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-             <div>Emanuel, Sr Strategist at Hiring.com</div>
+             <div><em>Emanuel, Sr Strategist at Hiring.com</em></div>
         </div>
 
   <div class="info-images">    
