--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
   
   <!--footer-->
        <footer>
-          <div>&copy 2016 Colmar Academy. All rights reserved</div> 
-         <div class="terms">Terms Privacy</div>
-          </footer>
+          <div class="copy">&copy 2016 Colmar Academy. All rights reserved</div> 
+           <div class="terms">Terms Privacy</div>
+            </footer>
      
 
   </body>
