--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 <!--top-banner-->
  <div class="top-banner">
       <img src="resources\images\banner.jpg" alt="Colmar Academy" title="Colmar Academy">
-         <section>
-              <h1>Learn Something<br/>New Every Day</h1>
-              <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit.</h3>
-              <div class="button"><a href="Start-here">Start Here</a></div>
-         </section>
+        <section>
+            <h1>Learn Something<br/>New Every Day</h1>
+            <h3>Loren ipsum dolor sit amet,<br/>consectetur adipiscing elit.</h3>
+            <div class="button"><a href="Start-here">Start Here</a></div>
+        </section>
       </div> 
 
        
@@ -48,8 +48,8 @@
      <div class="top-section">
            <img src="resources\images\information-main.jpg">
             <h2>It Doesn't Hurt To Keep Practicing</h2>
-              <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br/>
-                  nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br/> 
+              <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,
+                  nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam 
                   eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
              <div><em>Emanuel, Sr Strategist at Hiring.com</em></div>
         </div>
