--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
       <div class="top-section">
         <video src="resources/videos/thesis.mp4"></video>
            <h3>Reimagine Urban</h3>
-           <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec<br/> 
-               consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget<br/> 
+           <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec
+               consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget
                magna laoreet, efficitur dolor consequat, tristique ligula."</p>
            </div>
   <!--Thesis-exibit--> 
