--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
              <div><img src="resources\images\information-campus-mobile.jpg" alt="Campus" title="Our Campus"><section><h3>Our Campus</h3>
              <span>Find which campus is close by to you</span><br/><a href="#">Read More</a></section></div>
 
-             <div><img src="resources\images\information-guest-lecture-mobile.jpg" alt="Guest Lecture"><section><h3>Our Guest Lecture</h3>
+             <div><img src="resources\images\information-guest-lecture-mobile.jpg" alt="Lecture" title="Guest Lecture"><section><h3>Our Guest Lecture</h3>
              <span>Join a keynote with Oliver Sack about music in medical treatment</span><br/><a href="#">Read More</a></section></div>
         </div>
       </div>
