update 92 icons added capstone mq

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
    <head>
      <title>COLMAR ACADEMY</title>
-    <link href="https://fonts.googleapis.com/css?family=Kreon" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Kreon" rel="stylesheet">
        <link href="https://fonts.googleapis.com/css?family=Kranky" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
          <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-          <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">           
-           <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+          <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">    
+           <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">       
+            <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
   <body>
         
@@ -134,9 +135,15 @@
   
   <!--footer-->
        <footer>
-          <div class="copy">&copy 2016 Colmar Academy. All rights reserved</div> 
-           <div class="terms">Terms Privacy</div>
-            </footer>
+          <div class="copy">&copy 2016 Colmar Academy. All rights reserved</div>
+          <ul class="icons">
+            <i class="fa fa-youtube-square fa-lg"></i>
+            <i class="fa fa-twitter fa-lg"></i>
+            <i class="fa fa-instagram fa-lg"></i>
+            <i class="fa fa-facebook fa-lg"></i>
+           </ul>
+          <div class="terms"> Terms Privacy</div>
+       </footer>
      
 
   </body>
