update 93 favicon added capstone mq

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-   <head>
-     <title>COLMAR ACADEMY</title>
-      <link href="https://fonts.googleapis.com/css?family=Kreon" rel="stylesheet">
-       <link href="https://fonts.googleapis.com/css?family=Kranky" rel="stylesheet">
+    <head>
+      <title>COLMAR ACADEMY</title>
+        <link href="https://fonts.googleapis.com/css?family=Kreon" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Kranky" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
-         <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-          <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">    
-           <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">       
-            <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">    
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css"> 
+        <link rel="icon" href="./<favicon-name>.ico" type="image/x-icon">
+        <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
   <body>
         
