--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
            <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">    
          <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css"> 
-       <link rel="icon" href="/favicon.ico" type="image/x-icon">
-     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+       <link rel="icon" href="resources/images/favicon.ico" type="image/x-icon">
+     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
    </head>
  
  <body>
@@ -31,7 +31,7 @@
           <a href="#"><img src="resources/images/ic-on-campus.svg" alt="Online" title="Online"></a>
           <a href="#"><img src="resources/images/ic-online.svg" alt="Or Companies" title="Or Companies"></a>
           <a href="#"><img src="resources/images/ic-login.svg" alt="Sign In" title="Sign In"></a>
-         </nav>
+        </nav>
   </header> 
 
         
