--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
 <div class="Thesis-content">
       <div class="top-section" role="presentation">
-        <video src="resources/videos/thesis.mp4"></video>
+        <video src="resources/videos/thesis.mp4" controls>Video not supported</video>
            <h3>Reimagine Urban</h3>
            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec
                consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget
