--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
  
  <!--header-->
+ <main class="main-container">
  <header>
    <div role="presentation" aria-label="School Logo"><img class="logo" alt="A Rampant Lion" src="resources/images/ic-logo.svg"><strong>COLMAR</strong>
      <span style="color:black;">ACADEMY </span></div>
@@ -154,7 +155,7 @@
           </div>
         <div class="terms"> Terms Privacy</div>
       </footer>
-     
+     </main>
 
   </body>
 </html>
